CHANGES IN VERSION 1.1.15
-------------------------
USER UNVISIBLE CHANGES

    o added circle plots to specLSet plot method


CHANGES IN VERSION 1.1.14
-------------------------
USER UNVISIBLE CHANGES

  o LinkedTo Rcpp; added C++ STL lower bound function 
  which is reqired for determining overlapping q1 and q3 SWATH windows

CHANGES IN VERSION 1.1.13
-------------------------
USER VISIBLE CHANGES

  o fixed man pages 

CHANGES IN VERSION 1.1.12
-------------------------
USER VISIBLE CHANGES

  o impoved package vignette

CHANGES IN VERSION 1.1.11
-------------------------
USER VISIBLE CHANGES

    o modified default parameters of genSwathIonLib
    o add content to vignette 

CHANGES IN VERSION 1.1.10
-------------------------
USER VISIBLE CHANGES

    o added generate.consensus

CHANGES IN VERSION 1.1.9
-------------------------
USER VISIBLE CHANGES

    o new features in specLSet 'summary' plot

USER UNVISIBLE CHANGES

    o refactored merge.specLSet; merge by group_id 
    o added unit test for merge.specLSet

CHANGES IN VERSION 1.1.8
-------------------------
USER VISIBLE CHANGES

    o renamed annotateProteinID to annotate.protein_id
    o added graphics on plot.specLSet method

USER UNVISIBLE CHANGES

    o refactored merge
    

CHANGES IN VERSION 1.1.7
-------------------------
USER VISIBLE CHANGES

    o introduce peakplot for bibliospec object
    o introduce LCMS map for bibliospec object
    o vignette cosmetics


CHANGES IN VERSION 1.1.6
-------------------------
USER VISIBLE CHANGES

    o introduce specL_bibliospec summary method

CHANGES IN VERSION 1.1.5
-------------------------
USER VISIBLE CHANGES

    o specLSet merge function 

    o work on specLSet summary method


CHANGES IN VERSION 1.1.4
-------------------------
USER VISIBLE CHANGES

    o summary method of specLSet class 

USER UNVISIBLE CHANGES

    o unit test for data containing no iRT peptides

CHANGES IN VERSION 1.1.3
-------------------------

USER VISIBLE CHANGES
