@@ -3,6 +3,11 @@ CHANGES IN VERSION 1.1.15
 USER UNVISIBLE CHANGES
 
     o added circle plots to specLSet plot method
+    o added breaks argument in genSwathIonLib methode
+
+USER UNVISIBLE CHANGES
+
+    o added unit test for genSwathIonLib
 
 
 CHANGES IN VERSION 1.1.14
